# Master

./: README.md
Rust/exercise1/: Cargo.toml
Rust/exercise1/src/: exercise2.rs  exercise3.rs
Rust/exercise2/: Cargo.toml
Rust/exercise2/src/: exercise1.rs  exercise2.rs  exercise3.rs
Rust/exercise3/exercise1/src/: main.rs  math.rs
Rust/exercise3/exercise2_test/: Cargo.toml
Rust/exercise3/exercise2_test/src/: main.rs
Rust/exercise3/exercise3_test/: Cargo.toml
Rust/exercise3/exercise3_test/src/: main.rs
Rust/exercise3/math_advanced_ops/src/: lib.rs
Rust/exercise3/math_basic_ops/src/: lib.rs
Rust/exercise3/my_greetings/: Cargo.toml
Rust/exercise3/my_greetings/src/: greetings.rs
Rust/exercise4/: Cargo.toml
Rust/exercise4/src/: exercise1.rs  exercise2.rs  exercise3.rs  exercise4.rs
Rust/exercise5/src/: lib.rs
Rust/fifo_buffer/: Cargo.toml
Rust/fifo_buffer/src/: lib.rs  main.rs
Rust/fifo_buffer/tests/: test_fifo_buffer.rs
c/: CMakeLists.txt  compile_commands.json
c/exercise1/: CMakeLists.txt  exercise1.cpp  exercise2.cpp
c/exercise2/: CMakeLists.txt  MyBigInt.hpp  exercises1.cpp
c/exercise3/: CMakeLists.txt  MyBigInt.hpp  MyUniquePtr.h  exercise4.cpp
c/exercise4/: exercise1.cpp  exercise2.cpp
c/exercise5/: CMakeLists.txt  exercise1.cpp  exercise2.cpp
c/exercise6/: exercise1.cpp  exercise2.cpp
